--- a/web/css/style.css
+++ b/web/css/style.css
@@ -34,7 +34,6 @@ body {
 }
 
 .menu li a {
-    display: block;
     padding: 10px;
     margin-right: 10px;
     color: #222;
@@ -44,6 +43,15 @@ body {
     text-transform: uppercase;
     font-size: 0.875rem;
     letter-spacing: .1em;
+    transition: margin-top 0.3s ease;
+    display: block;
+}
+
+.menu li a:hover {
+    margin-top: -5px;
+    color: #fff;
+    transform: scale(1.1);
+
 }
 
 .grid-section {
@@ -94,6 +102,10 @@ body {
     height: 370px;
     overflow-y: scroll;
     grid-column: 2;
+}
+
+.animais-lista li {
+    cursor: pointer;
 }
 
 .animais-lista::-webkit-scrollbar {
@@ -205,4 +217,83 @@ body {
     .copy {
         margin-bottom: 0px;
     }
+}
+
+.js .js-tabcontent section {
+    display: none;
+}
+
+.js-tabcontent section.ativo {
+    display: block !important;
+    animation: show .5s forwards;
+}
+
+@keyframes show {
+    from {
+        opacity: 0%;
+        transform: translate3d(-30px, 0, 0);
+    }
+    to {
+        opacity: 1;
+        transform: translate3d(0,0,0);
+    }
+}
+
+.js-accordion dt {
+    cursor: pointer;
+}
+
+
+.js .js-accordion dd {
+    position: relative;
+    display: none;
+    
+    
+}
+
+.js .js-accordion dt::after {
+    content: '⮝';
+    position: absolute;
+    margin-left: 8px;
+    transition: transform .3s ease;
+    color: black;
+    
+}
+
+
+.js .js-accordion dt.ativo::after {
+    content: '⮟';
+    position: absolute;
+    margin-left: 8px;
+    transition: transform .3s ease;
+    margin-top: -2px;
+    color: black;
+}
+
+.js-accordion dd.ativo {
+    display: block;
+    animation: slideDown .15s forwards;
+}
+
+@keyframes slideDown {
+    from {
+        opacity: 0;
+        max-height: 0;
+    }
+    to {
+        max-height: 200px;
+        opacity: 1;
+    }
+}
+
+.js .js-scroll {
+    opacity: 0;
+    transform: translate3d(-30px, 0, 0);
+}
+
+.js .js-scroll.ativo {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+    transition: .3s;
+
 }
